Related Product Slider added on PDP page and apply Yotpo

--- a/src/assets/CSS/productpage.css
+++ b/src/assets/CSS/productpage.css
@@ -253,6 +253,7 @@ input.cartInputText {
     letter-spacing: 3px;
     font-size: 30px;
     margin: 0 0 15px;
+    text-transform: uppercase;
 }
 
 .instascript {
