--- a/src/components/slider/relatedproduct.css
+++ b/src/components/slider/relatedproduct.css
@@ -2,6 +2,14 @@
     padding: 0 0 150px;
 }
 
+.relatedproductContainer {
+    padding-top: 25px;
+}
+
+p.relatedProPrice {
+    margin-bottom: 10px !important;
+}
+
 .pdprelatedprodsection {
     background: #2A2F4A;
     padding-top: 70px;
@@ -10,7 +18,7 @@
 .relatedProductTitle {
     text-align: center;
     letter-spacing: 3px;
-    font-size: 30px !important;
+    font-size: 26px !important;
     margin: 0 0 40px;
     text-transform: uppercase;
 }
