Add Slick Slider into Product Thumbnail Image

--- a/src/assets/CSS/productpage.css
+++ b/src/assets/CSS/productpage.css
@@ -2,6 +2,10 @@ body {
     background-color: transparent;
 }
 
+.pdpmeta {
+    display: inline !important;
+}
+
 .wrapper {
     width: 100%;
     margin: 0 auto;
