--- a/src/assets/CSS/shoppage.css
+++ b/src/assets/CSS/shoppage.css
@@ -185,6 +185,20 @@ iframe.videoframe {
         padding: 0 15px 30px;
         width: 100% !important;
     }
+    .product-listing .imageContainer a img {
+        width: 100% !important;
+    }
+    h2.PDP_productTitle {
+        font-size: 18px !important;
+    }
+    .propagedesc {
+        font-size: 16px;
+    }
+    .ytubesection iframe {
+        width: 100%;
+        height: 275px;
+        padding: 15px;
+    }
 }
 
 .Container {
