--- a/src/App.css
+++ b/src/App.css
@@ -1497,6 +1497,25 @@ hr.major {
     /* .cartgroup .cartInput {
         width: 170px !important;
     } */
+    ul.mobfooter li {
+        padding-left: 0px !important;
+        margin-right: 0px !important;
+        font-size: 9px !important;
+        letter-spacing: 0px !important;
+        display: inline-block !important;
+        list-style: outside none none;
+        margin: 0 1em;
+        padding: 0;
+    }
+    .mobfooter li a {
+        font-size: 16px;
+        font-weight: 600;
+        color: #fff;
+    }
+    .mobfooter li a:before,
+    .mobfooter li a:after {
+        border: none;
+    }
 }
 
 @media screen and (max-width: 480px) {
@@ -4541,4 +4560,13 @@ span.cartQuan {
     font-weight: 600;
     color: #fff;
     border: 2px solid #fff;
+}
+
+.webhide {
+    display: none;
+}
+
+ul.copyright li {
+    color: #fff !important;
+    font-size: 15px;
 }
