--- a/src/App.css
+++ b/src/App.css
@@ -4601,3 +4601,53 @@ ul.copyright li {
     position: absolute;
     top: 0;
 }
+
+.mainDrwaerOverlay {
+    z-index: 1;
+}
+
+.cartOverlay {
+    background-color: #000;
+    opacity: 0.5;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.mainDrwaerContent {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 100%;
+    outline: 0px;
+    z-index: 1400;
+    max-height: 100vh;
+    background: #fff;
+    color: inherit;
+    box-shadow: rgb(0 0 0 / 10%) 0px 10px 15px -3px, rgb(0 0 0 / 5%) 0px 4px 6px -2px;
+    max-width: 32rem;
+}
+
+.cartClose {
+    /* outline: 0px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    flex-shrink: 0 !important;
+    border-radius: 0.375rem !important; */
+    transition: all 0.2s ease 0s;
+    width: 32px !important;
+    height: 32px !important;
+    font-size: 12px !important;
+    /* position: absolute !important;
+    top: 0.5rem !important;
+    right: 0.75rem !important; */
+}
+
+.chakra-portal {
+    z-index: 99999;
+    position: absolute;
+    color: #000;
+}
