--- a/src/App.css
+++ b/src/App.css
@@ -1414,6 +1414,8 @@ hr.major {
     .footerTwo {
         width: 100% !important;
         margin-bottom: 50px;
+        padding-left: 0px !important;
+        text-align: center;
     }
     .col-3.col-12-small.biosection {
         width: 100% !important;
@@ -1512,7 +1514,6 @@ hr.major {
     }
     .mobfooter li a {
         font-size: 16px;
-        font-weight: 600;
         color: #fff;
     }
     .mobfooter li a:before,
@@ -1559,6 +1560,32 @@ hr.major {
         margin-bottom: 0;
         padding-bottom: 0;
         padding: 21px 20px;
+    }
+    .footerThree {
+        width: 100% !important;
+    }
+    .footerBlogsList {
+        padding-left: 0px !important;
+        padding-top: 20px;
+    }
+    .blogList h4 {
+        font-size: 22px !important;
+    }
+    .secondFooter {
+        width: 100% !important;
+        padding-right: 0px !important;
+        padding-left: 0px !important;
+        margin-top: 25px;
+    }
+    .secondFooter h4 {
+        font-size: 22px !important;
+    }
+    .footerrptitle a,
+    .footerrpdate {
+        font-size: 16px !important;
+    }
+    ul.copyright li {
+        font-size: 16px !important;
     }
 }
 
@@ -3932,10 +3959,11 @@ header#header {
     justify-content: space-between;
 }
 
-ul.links {
+
+/* ul.links {
     display: flex;
     list-style: none;
-}
+} */
 
 ul.links li {
     padding-left: 30px;
@@ -3968,7 +3996,7 @@ textarea {
 .links a {
     margin: 0.1em 0;
     display: block;
-    color: rgba(255, 255, 255, 0.5);
+    color: rgba(255, 255, 255, 1);
     position: relative;
     text-decoration: none;
     border: none;
@@ -3985,7 +4013,8 @@ textarea {
     opacity: 0;
 }
 
-.links a:before {
+
+/* .links a:before {
     left: -10px;
     top: 20px;
     border-left: 3px solid #9bf1ff;
@@ -4001,7 +4030,7 @@ textarea {
     border-bottom: 3px solid #9bf1ff;
     -webkit-transform: translate(-100%, -50%);
     transform: translate(-100%, -50%);
-}
+} */
 
 .links a:hover,
 .links .current a {
@@ -4116,11 +4145,48 @@ textarea {
 }
 
 .footerOne {
-    width: 40%;
+    width: 30%;
 }
 
-.footerTwo {
-    width: 60%;
+.secondFooter {
+    width: 20%;
+    padding-right: 65px;
+    padding-left: 35px;
+}
+
+.secondFooter h4 {
+    text-align: center;
+}
+
+.footerThree {
+    width: 50%;
+}
+
+.blogList h4 {
+    text-align: center;
+    margin-bottom: 0px;
+    margin-top: 10px;
+}
+
+.blogList .footertitledate {
+    padding-bottom: 15px;
+}
+
+.footerrptitle a,
+.footerrpdate {
+    font-size: 19px;
+    border: none;
+    line-height: 28px;
+}
+
+.footerBlogsList {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 1rem;
+}
+
+.footerallpostlist {
+    width: 50%;
 }
 
 
@@ -4621,7 +4687,7 @@ span.cartQuan {
 
 ul.copyright li {
     color: #fff !important;
-    font-size: 15px;
+    font-size: 18px;
 }
 
 .footericon:before {
