--- a/src/App.css
+++ b/src/App.css
@@ -1570,6 +1570,7 @@ hr.major {
     }
     .blogList h4 {
         font-size: 22px !important;
+        text-align: center !important;
     }
     .secondFooter {
         width: 100% !important;
@@ -2360,6 +2361,7 @@ ul.icons {
     cursor: default;
     list-style: none;
     padding-left: 0;
+    text-align: center;
 }
 
 ul.icons li {
@@ -3694,6 +3696,7 @@ body.is-preload #banner>.inner {
     font-size: 0.8em;
     list-style: none;
     padding-left: 0;
+    text-align: center;
 }
 
 #footer .copyright li {
@@ -3966,10 +3969,12 @@ header#header {
 } */
 
 ul.links li {
-    padding-left: 30px;
+    padding-left: 5px;
     margin-right: 15px;
     font-size: 18px;
     letter-spacing: 2px;
+    display: block;
+    line-height: 34px;
 }
 
 textarea {
@@ -4163,9 +4168,7 @@ textarea {
 }
 
 .blogList h4 {
-    text-align: center;
-    margin-bottom: 0px;
-    margin-top: 10px;
+    text-align: left;
 }
 
 .blogList .footertitledate {
@@ -4182,7 +4185,7 @@ textarea {
 .footerBlogsList {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 1rem;
+    padding-left: 0rem;
 }
 
 .footerallpostlist {
@@ -4764,4 +4767,16 @@ ul.copyright li {
 
 span.image.fit.projectimg.effect_lily {
     margin-bottom: 0.5em;
+}
+
+.footerrpdate {
+    font-size: 15px !important;
+}
+
+.footerrptitle {
+    line-height: 33px;
+}
+
+.cartQty {
+    max-width: 120px;
 }
