Add Loading Spinner on whole site

--- a/src/App.css
+++ b/src/App.css
@@ -4854,7 +4854,7 @@ section.github--profile h3.gitblocktitle {
 }
 
 .github--profile__state {
-    background: #1a4e8e;
+    background: #2D324D;
     text-align: center;
     padding: 1.875rem 0.9375rem;
     border-radius: 0 0 0.3125rem 0.3125rem;
